--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -20,7 +20,6 @@ input[type=text]{
     font-family: 'Raleway', sans-serif;
     font-size: .9rem;
     padding-left: 5px;
-    height: 20px;
 }
 
 .page-title {
@@ -76,6 +75,7 @@ nav {
 main {
     height: calc(100vh - 110px - 42px);
     background-image: linear-gradient(180deg, #dac4b2, white);
+    /*background-color: white;*/
     padding: 30px 0;
     overflow-y: auto;
 }
@@ -123,25 +123,10 @@ main {
     height: 350px;
 }
 
-.username-form {
-    padding-top: 100px;
-    display: grid;
-}
-
-.username-form, 
-h1 {
-    display: grid;
-    place-items: start center;
-}
-
 .form-content{
     display: flex;
     align-items: center;
     gap: 15px;
-}
-
-.get-username-form h4 {
-    padding-bottom: 20px;
 }
 
 footer {
@@ -160,6 +145,21 @@ footer {
 .footer-right {
     padding: 10px;
     display: flex;
+}
+
+.submit-form-btn {
+    font-family: 'Raleway', sans-serif;
+    width: 200px;
+    height: 30px;
+    border-radius: 20px;
+    border: none;
+    background-color: #ECE1D8;
+    font-size: 1rem;
+}
+
+.action {
+    display: grid;
+    place-items: center;
 }
 
 @media screen and (max-width: 998px){
