--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -85,7 +85,7 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: url(../assets/images/book-wall-3.jpg);
+    background-image: url(../../public/assets/images/book-wall-3.jpg);
     background-repeat: repeat-y;
     background-size: 100vw;
 }
