--- a/src/styles/library.css
+++ b/src/styles/library.css
@@ -4,6 +4,10 @@ option {
     font-size: 1rem;
 }
 
+ul {
+    list-style: none;
+}
+
 .user-bar,
 .search-bar-container,
 .add-book-container {
@@ -35,7 +39,7 @@ option {
 }
 
 .book {
-    width: 700px;
+    width: 750px;
     height: 100px;
     border-bottom: 1px solid black;
     padding-bottom: 10px;
@@ -43,6 +47,16 @@ option {
     align-items: center;
     gap: 20px;
     justify-content: space-between;
+}
+
+.view-description {
+    width: 750px;
+    height: auto-fit;
+    border-bottom: 1px solid black;
+    padding: 10px 0 10px 0;
+    display: flex;
+    align-items: center;
+    text-align: justify;
 }
 
 .book-left{
